--- a/plugins/nf-observer/build.gradle
+++ b/plugins/nf-observer/build.gradle
@@ -18,6 +18,7 @@ plugins {
     // Apply the groovy plugin to add support for Groovy
     id 'io.nextflow.groovy-library-conventions'
     id 'idea'
+    id "de.undercouch.download" version "5.3.0"
 }
 
 group = 'io.nextflow'
@@ -78,6 +79,7 @@ dependencies {
     modules {
         module("commons-logging:commons-logging") { replacedBy("org.slf4j:jcl-over-slf4j") }
     }
+    implementation "org.apache.httpcomponents:httpclient:4.5.13"
 }
 
 // use JUnit 5 platform
